# sprd-backend

./: .env  .env.dev  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  travis.sh
.github/workflows/: rust.yml
docs/: system.wsd
migrations/2020-10-17-033439_rapid_entry/: down.sql  up.sql
migrations/2020-12-19-151554_create_rapid/: down.sql  up.sql
src/: gz.rs  lib.rs  main.rs  rapid.rs  rapid_store.rs  sdp.rs
src/db/: mod.rs  models.rs  schema.rs
src/db/api/: mod.rs  rapid_entry.rs  repo.rs
