[package]
name = "sprd-backend"
version = "0.1.0"
authors = ["Gajo Petrovic <gajopetrovic@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
flate2 = "1.0.19"
walkdir = "2"
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33.3"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]
