[package]
authors = ["Gajo Petrovic <gajopetrovic@gmail.com>"]
edition = "2021"
name = "sprd-backend"
version = "0.1.0"

[dependencies]
clap = "3.0.14"
diesel = {version = "1.4.8", features = ["postgres"]}
dotenv = "0.15.0"
flate2 = "1.0.22"
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = {version = "1.0.136", features = ["derive"]}
walkdir = "2.3.2"
